<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_reg_name"
            android:id="@+id/regNameEditText"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:maxLength="32" android:importantForAutofill="no" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/regPasswordEditText" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/reg_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            android:id="@+id/registrationButton" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/regNumberPhone"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_input_password"
            android:id="@+id/regPasswordEditText"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:maxLength="32" android:importantForAutofill="no" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/regLoginEditText" android:layout_marginTop="24dp"/>
    <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_input_login"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:maxLength="32"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/regLoginEditText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/regNumberPhone"
            app:layout_constraintTop_toBottomOf="@+id/regNameEditText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            android:hint="@string/hint_reg_phone_number"/>
</android.support.constraint.ConstraintLayout>