<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AuthorizationActivity">

    <!-- Поля для ввода -->
    <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_input_login"
            android:id="@+id/loginEditText"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:maxLength="32"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            android:layout_width="0dp" android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_input_password"
            android:id="@+id/passwordEditText" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEditText" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:maxLength="32" android:importantForAutofill="no"/>
    <TextView
            android:text="Entered login"
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
    />

    <TextView
            android:text="Entered password"
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            tools:ignore="HardcodedText"
            android:layout_marginBottom="120dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/login_text"
            android:onClick="authorizeUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/authorizeButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>


</android.support.constraint.ConstraintLayout>